<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_80sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginEnd="@dimen/_10sdp">

    <LinearLayout
        android:id="@+id/lyt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/bg_compare1"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="@dimen/_3sdp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:maxLines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jenis_reksa_dana"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="12sp"/>
    
    <LinearLayout
        android:id="@+id/lyt_jenis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_compare1"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp">
        <TextView
            android:id="@+id/jenis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imbal_hasil"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="12sp"/>
    <LinearLayout
        android:id="@+id/lyt_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_compare1"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp">
        <TextView
            android:id="@+id/hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dana_kelolaan"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="12sp"/>
    <LinearLayout
        android:id="@+id/lyt_dana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_compare1"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp">
        <TextView
            android:id="@+id/dana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/min_pembelian"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="12sp"/>
    <LinearLayout
        android:id="@+id/lyt_beli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_compare1"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp">
        <TextView
            android:id="@+id/min_beli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jangka_waktu"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="12sp"/>
    <LinearLayout
        android:id="@+id/lyt_jangka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_compare1"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp">
        <TextView
            android:id="@+id/jangka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tingkat_resiko"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="12sp"/>
    <LinearLayout
        android:id="@+id/lyt_resiko"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_compare1"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp">
        <TextView
            android:id="@+id/resiko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/peluncuran"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="12sp"/>
    <LinearLayout
        android:id="@+id/lyt_peluncuran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_compare1"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp">
        <TextView
            android:id="@+id/peluncuran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="12sp"/>
    </LinearLayout>
</LinearLayout>